As an app developer I want to get full details of any given Customer to show in my app
